@@ -114,9 +114,9 @@ public class HostKey{
   public String getFingerPrint(JSch jsch){
     HASH hash=null;
     try{
-      String _c=jsch.getConfig("FingerprintHash").toLowerCase();
-      Class c=Class.forName(jsch.getConfig(_c));
-      hash=(HASH)(c.newInstance());
+      String _c=JSch.getConfig("FingerprintHash").toLowerCase();
+      Class<?> c=Class.forName(JSch.getConfig(_c));
+      hash=(HASH)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){ System.err.println("getFingerPrint: "+e); }
     return Util.getFingerPrint(hash, key, false, true);
