@@ -57,15 +57,16 @@ public class KeyPairRSA extends KeyPair{
     this.pub_array = pub_array;
     this.prv_array = prv_array;
     if(n_array!=null){
-      key_size = (new java.math.BigInteger(n_array)).bitLength();
+      key_size = (new BigInteger(n_array)).bitLength();
     }
   }
 
+  @Override
   void generate(int key_size) throws JSchException{
     this.key_size=key_size;
     try{
-      Class c=Class.forName(jsch.getConfig("keypairgen.rsa"));
-      KeyPairGenRSA keypairgen=(KeyPairGenRSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig("keypairgen.rsa"));
+      KeyPairGenRSA keypairgen=(KeyPairGenRSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(key_size);
       pub_array=keypairgen.getE();
       prv_array=keypairgen.getD();
@@ -81,18 +82,19 @@ public class KeyPairRSA extends KeyPair{
     }
     catch(Exception e){
       //System.err.println("KeyPairRSA: "+e);
-      if(e instanceof Throwable)
-        throw new JSchException(e.toString(), (Throwable)e);
-      throw new JSchException(e.toString());
+      throw new JSchException(e.toString(), e);
     }
   }
 
   private static final byte[] begin=Util.str2byte("-----BEGIN RSA PRIVATE KEY-----");
   private static final byte[] end=Util.str2byte("-----END RSA PRIVATE KEY-----");
 
+  @Override
   byte[] getBegin(){ return begin; }
+  @Override
   byte[] getEnd(){ return end; }
 
+  @Override
   byte[] getPrivateKey(){
     int content=
       1+countLength(1) + 1 +                           // INTEGER
@@ -123,6 +125,7 @@ public class KeyPairRSA extends KeyPair{
     return plain;
   }
 
+  @Override
   boolean parse(byte [] plain){
 
     try{
@@ -160,7 +163,7 @@ public class KeyPairRSA extends KeyPair{
 	  p_array=buf.getMPIntBits();
 	  q_array=buf.getMPIntBits();
           if(n_array!=null){
-            key_size = (new java.math.BigInteger(n_array)).bitLength();
+            key_size = (new BigInteger(n_array)).bitLength();
           }
 
           getEPArray();
@@ -303,7 +306,7 @@ public class KeyPairRSA extends KeyPair{
       index+=length;
 
       if(n_array!=null){
-        key_size = (new java.math.BigInteger(n_array)).bitLength();
+        key_size = (new BigInteger(n_array)).bitLength();
       }
 
     }
@@ -314,6 +317,7 @@ public class KeyPairRSA extends KeyPair{
     return true;
   }
 
+  @Override
   public byte[] getPublicKeyBlob(){
     byte[] foo=super.getPublicKeyBlob();
     if(foo!=null) return foo;
@@ -327,21 +331,26 @@ public class KeyPairRSA extends KeyPair{
   }
 
   private static final byte[] sshrsa=Util.str2byte("ssh-rsa");
+  @Override
   byte[] getKeyTypeName(){return sshrsa;}
+  @Override
   public int getKeyType(){return RSA;}
 
+  @Override
   public int getKeySize(){
     return key_size;
   }
 
+  @Override
   public byte[] getSignature(byte[] data){
     return getSignature(data, "ssh-rsa");
   }
 
+  @Override
   public byte[] getSignature(byte[] data, String alg){
     try{
-      Class c=Class.forName(jsch.getConfig(alg));
-      SignatureRSA rsa=(SignatureRSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig(alg));
+      SignatureRSA rsa=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
       rsa.init();
       rsa.setPrvKey(prv_array, n_array);
 
@@ -357,14 +366,16 @@ public class KeyPairRSA extends KeyPair{
     return null;
   }
 
+  @Override
   public Signature getVerifier(){
     return getVerifier("ssh-rsa");
   }
 
+  @Override
   public Signature getVerifier(String alg){
     try{
-      Class c=Class.forName(jsch.getConfig(alg));
-      SignatureRSA rsa=(SignatureRSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig(alg));
+      SignatureRSA rsa=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
       rsa.init();
 
       if(pub_array == null && n_array == null && getPublicKeyBlob()!=null){
@@ -393,11 +404,12 @@ public class KeyPairRSA extends KeyPair{
     kpair.c_array = tmp[4];     // iqmp
     kpair.p_array = tmp[5];
     kpair.q_array = tmp[6];
-    kpair.publicKeyComment = new String(tmp[7]);
+    kpair.publicKeyComment = Util.byte2str(tmp[7]);
     kpair.vendor=VENDOR_OPENSSH;
     return kpair;
   }
 
+  @Override
   public byte[] forSSHAgent() throws JSchException {
     if(isEncrypted()){
       throw new JSchException("key is encrypted.");
@@ -437,6 +449,7 @@ public class KeyPairRSA extends KeyPair{
     return c_array;
   }
 
+  @Override
   public void dispose(){
     super.dispose();
     Util.bzero(prv_array);
